# taxiproject

.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml  model_training_pipeline.yaml
taxi_project/: .gitignore  README.md
taxi_project/data/: README.md
taxi_project/models/: lgb_model.pkl
taxi_project/notebooks/: 01_fetch_data.ipynb  02_validate_and_save.ipynb  04_transform_ts_data_into_features_and_targets.ipynb  05_transform_raw_data_into_features_and_targets.ipynb  08_xgboost_model.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb  14_model_training_pipeline.ipynb  15_predict_using_hopsworks_model.ipynb  16_inference_pipeline.ipynb  17_fetch_predictions.ipynb  19_retraining_model.ipynb  README.md  pyproject.toml
taxi_project/src/: config.py  experiment_utils.py  plot_utils.py
taxi_project/src/models/: data_utils.py  train.py
taxi_project/src/pipelines/: pipeline.py
taxi_project/src/utils/: helpers.py
taxi_project/tests/: test_data.py  test_models.py
