[project]
name = "taxi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "nithinyanna10",email = "nithinyanna3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "hopsworks (==4.1.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
